Improve chess board functionality and fix visual issues
- Fix board orientation for black pieces to display at bottom when playing as black
- Respect user's manual board flips when receiving Style12 events
- Fix square coloring to make a1 a dark square as per standard chess notation
- Enhance drag and drop functionality with custom visual feedback
- Fix issue where huge pawn appeared on left side during dragging
- Implement proper cleanup for drag operations to prevent memory leaks
- Add active/inactive color styles for player clocks in CSS
- Fix file labels to stay on bottom row when board is flipped
- Improve sound playing functionality with proper error handling
- Fix FEN variable reference error in error logging
- Add debug logging to help diagnose orientation issues
- Ensure pieces remain visible during fast moves with multiple safeguards
- Move piece opacity styling from inline styles to CSS classes
- Allow any pieces to be draggable when observing games or analyzing positions

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+- Fix artifact when dragging a piece.
 - Add a layout when width is an issue. Put clocks on top and bottom.
 - Fix game end.
 - Fix bug where tells from channel tabs are not sent.
